# advent-of-code

./: .gitignore  day1a.py  day2a.py  day4a.py  day5a.py  day8a.py  pyproject.toml  requirements.txt  template.py
2017/: day1a.py  day2b.py  template.py
2018/: day11b-numpy.py  day2b.py  day3a.py  day6a.py  requirements.txt
2019/: Pipfile  agc.py  day12a.py  day12b.py  day13b.py  day14a.py  day14b.py  day15b.py  day16a.py  day16b.py  day17b.py  day1b.py  day6b.py  day7b.py  day8a.py  day9a.py  day9b.py  ez.py  python
2020/: Pipfile  day01a.py  day02a.py  day02b.py  day04a.py  day07b.py  day08b.py  day09a.py  day09b.py  day10b_maik.py  day10b_optimized.py  day11a.py  day11b.py  day12a.py  day12b.py  day13a.py  day13b_condensed.py  day14a.py  day16a_draft.py  day16a_oneline.py  day16b.py  day17.py  day17a.py  day17b.py  day18a.py  day19a.py  day19b.py  day22a.py  day23a.py  day23b.py  template.py
2021/: Pipfile  day02b.py  day03b.py  day04a.py  day05a.py  day06a.py  day07b.py  day08b.py  day10a.py  day10b.py  day11a.py  day11b.py  day12a.py  day12b.py  day13b.py  day14a.py  day14b.py  day15a.py
2022/: day02a.py  day02b.py
aoc_gliech/: __init__.py  scripts.py  util.py
aoc_gliech/old/2017/: day1b.py
aoc_gliech/old/2018/: day11a.py  day11b-recursive.py  day11b.py  day1b.py  day4b.py  day5b.py  day8b.py
aoc_gliech/old/2019/: curses_helper.py  day10a.py  day10b.py  day11b.py  day13a.py  day15a.py  (+9 more)
aoc_gliech/y2023/: d01.py  d02.py  d03.py  d04.py  d07.py  d10.py  d11.py  d15.py
aoc_gliech/y2024/: d04.py  d06.py  d07.py
aoc_gliech/y2025/: d08.py
aoc_tofu/: __init__.py
legacy/2017/: day2a.py  day2b.py  day3a.py
legacy/2018/: day3b.py  day6b.py  day7a.py  template.py
legacy/2019/: Pipfile  day11a.py  day12b.py  day13b.py  day1a.py  day2a.py  day2b.py  day3b.py  day4a.py  day8b.py  template.py
legacy/2020/: day03a.py  day03b.py  day06a.py  day06b.py  day07a.py  day13b.py  day14a.py  day14b.py  day15.py  day16b_draft.py  day19a.py  day22b.py
legacy/2021/: day05b.py  day11b.py  day12a.py  day15b.py  day16a.py  day16b.py
legacy/2022/: day01b.py
(+32 files in other folders)
