[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "advent-of-code-gliech"
description     = "My solutions to https://adventofcode.com"
version         = "0.1.0"
authors         = [{name = "gliech"}]
license.file    = "LICENSE"
readme          = "README.md"
requires-python = ">=3.12"
urls.homepage   = "https://github.com/gliech/advent-of-code"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Puzzle Games"
]
dependencies = [
    "advent-of-code-data >= 2.0.0",
    "browser-cookie3 >= 0.19.1",
    "numpy >= 1.26.2",
    "pyyaml >= 6.0.1",
    "prettyprinter >= 0.18.0",
]

[project.entry-points."adventofcode.user"]
gliech_py = "aoc_gliech.entrypoints:python"
gliech_tf = "aoc_gliech.entrypoints:tofu"

[tool.hatch.build.targets.wheel]
packages = ["aoc_gliech"]
